fixed on mobile

--- a/files/stacks_page_page0.css
+++ b/files/stacks_page_page0.css
@@ -6093,7 +6093,7 @@ h6.foundry-typeface-two {
 
 
 #stacks_out_236 {
-	width: 75%;
+	width: 81%;
 }
 
 
